实现命令行工具的基础功能，添加交互式模式和命令处理逻辑，更新 README 文档以提供使用说明和示例，配置 package.json 以支持命令行执行。

--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "browser-agent",
   "module": "index.ts",
   "type": "module",
+  "bin": {
+    "browser-agent": "./index.ts"
+  },
   "scripts": {
+    "start": "bun run index.ts",
+    "dev": "bun --watch index.ts -i",
     "install-deps": "PUPPETEER_SKIP_DOWNLOAD=true bun add puppeteer commander"
   },
   "devDependencies": {
