集成 AI 功能，支持直接发送内容给 AI 模型并获取响应；更新 README 文档以说明新功能和环境变量配置；调整命令行选项以支持 AI 输入。

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "start": "bun run index.ts",
-    "dev": "bun --watch index.ts -i",
+    "dev": "bun --watch index.ts",
+    "test-ai": "bun run test-ai.ts",
     "install-deps": "PUPPETEER_SKIP_DOWNLOAD=true bun add puppeteer commander"
   },
   "devDependencies": {
