--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
   "dependencies": {
     "@ai-sdk/deepseek": "^1.0.13",
     "ai": "^5.0.28",
-    "zod": "^4.1.5",
+    "commander": "^14.0.0",
     "puppeteer": "^24.17.1",
-    "commander": "^14.0.0"
+    "zod": "^4.1.5"
   }
 }
